# myvimrc

./: .gitignore  README.md  _gvimrc  _vimrc  utils.py
.vim/: README.md  dein.toml  dein.vim  site.vim
NVIM/: README.md  binary_fetcher.sh  binary_installer.py  install_config.py
NVIM/config_nvim/: _plugins.vim  init.lua  pyproject.toml  python_requirements.txt
NVIM/config_nvim/lsp/: basepyright.lua  eslint.lua  lua_ls.lua  volar.lua  vtsls.lua
NVIM/config_nvim/lua/: lazy_setup.lua  python_venv.lua  pytoy_reboot.lua  vscode_lazy_setup.lua
NVIM/config_nvim/lua/config/: extras.lua  keymaps.lua  options.lua
NVIM/config_nvim/lua/mylsp/: common.lua  eslint.lua  pyright.lua  ts_ls.lua
NVIM/config_nvim/lua/plugins/: blink.lua  cmp.lua  formatting.lua  lsp.lua  markdown.lua  my.lua  ui.lua
NVIM/config_nvim/lua/vscode_config/: init.lua  path_solver.lua
NVIM/installer_fetcher/: binary_fetcher.sh  fetch_config.py  install_config.py  requirements.txt  utils_config.py
NVIM/installer_fetcher/config_nvim/: init.lua  python_requirements.txt
OTHERS/: crude_rename_refactor.py
SANDBOX/: coc-settings.json
SANDBOX/NVIM/installer_fetcher/: README.md  binary_fetcher.sh  fetch_config.py  install_config.py  utils_config.py
SANDBOX/NVIM/nvim/: init.lua
SANDBOX/VSCODE/: keybindings.json
VIM/: README.md  _vimrc  fetch.py  install.py  utils.py
VIM/.vim/: dein.toml  dein.vim  dein_lazy.toml  lsp.vim  scratch.vim
VSCODE/: fetch.py  install.py  keybindings.json  settings.json  utils.py
VSCODE/host/: keybindings.json  settings.json
VSCODE/remote/: settings.json
(+38 files in other folders)
